
2011-08-04 Anthony Penhard
	* Add some modifications

2011-04-29  Cyrille Demaret
	* Initial code base of the new version
	