@@ -1,5 +1,8 @@
 <?
 
-header('Location: design.php');
+if (file_exists("check_install.php"))
+	header('Location: check_install.php');
+else
+	header('Location: design_view.php');
 
 ?>
