@@ -1,0 +1,12 @@
+<?
+
+require_once("include/common.php");
+require_once("include/linknx.php");
+
+tpl()->addCss('css/style.css');
+
+tpl()->addJs('js/setup_design.js');
+
+tpl()->display('setup_design.tpl');
+
+?>
